--- a/project/templates/service.html
+++ b/project/templates/service.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
 {% block content %}
-<h1>About</h1>
-This is About page
+<h1>Service</h1>
+This is Service page
 {% endblock %}
