--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -7,32 +7,45 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Welcome to XXX Law Office</title>
-    <!-- style -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <!-- style -->
+    <link href="{{ url_for('static', filename='bootstrap-3.3.6-dist/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
     {% block head_content %}
     {% endblock %}
   </head>
   <body>
-    <div>
-      <p><a href="/">Home</a></p>
-      <p><a href="/about">About</a></p>
-      <p><a href="/service">Service</a></p>
-      <p><a href="/access">Access</a></p>
-      <p><a href="/contact">Contact</a></p>
-    </div>
-    <div class="container">
-      <div class="content">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
-    <div class="footer">
-      <hr>
-      <p><a href="#">Design by Ryu</a></p>
-    </div>
-    <!-- script -->
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <!-- script -->
+    <div class="navbar-wrapper"> 
+      <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle bollapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">XXX Law Office</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/service">Service</a></li>
+            <li><a href="/access">Access</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div> 
+
+    {% block content %}
+    {% endblock %}
+    <hr class="featurette-divider">
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>
+        &copy; 2016 Company, Inc. · <a href="#">Design by Ryu</a>
+      </p>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='bootstrap-3.3.6-dist/js/bootstrap.min.js') }}"></script>
   </body>
 </html>
