added new blog to home.html

--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -47,5 +47,13 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='bootstrap-3.3.6-dist/js/bootstrap.min.js') }}"></script>
+    <script type=text/javascript>
+      jQuery(document).ready(function($){
+          var cur = window.location.pathname;
+          $("#navbar ul li a").each(function() {
+            if ($(this)[0].pathname === cur) $(this).parent().addClass("active");
+          })
+      });
+    </script>
   </body>
 </html>
