--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Welcome to XXX Law Office</title>
+    <title>Welcome to Sample Office Website</title>
     <link href="{{ url_for('static', filename='bootstrap-3.3.6-dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
     {% block head_content %}
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="navbar-wrapper"> 
-      <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle bollapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">XXX Law Office</a>
+          <a class="navbar-brand" href="/">Sample Office Website </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -39,12 +39,12 @@
     {% block content %}
     {% endblock %}
     <hr class="featurette-divider">
-    <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>
-        &copy; 2016 Company, Inc. · <a href="#">Design by Ryu</a>
-      </p>
-    </footer>
+    <div class="container">
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p><a href="#">Design by Ryu</a></p>
+      </footer>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='bootstrap-3.3.6-dist/js/bootstrap.min.js') }}"></script>
     <script type=text/javascript>
@@ -55,5 +55,7 @@
           })
       });
     </script>
+    {% block js_content %}
+    {% endblock %}
   </body>
 </html>
