--- a/project/templates/access.html
+++ b/project/templates/access.html
@@ -18,11 +18,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h2>Address</h2>
-      <div>
-        <p>〒120-0026 東京都足立区千住旭町42-1</p>
-        <p>〒120-0026 42-1, Senjuasahichō, Adachi-ku, Tokyo</p>
-      </div>
+      <h2>Information</h2>
+      <h3>Address</h3>
+      <p>〒120-0026 東京都足立区千住旭町42-1</p>
+      <p>北千住駅東口 徒歩５分。千住道沿いにある「あああビル」の4階が受付です。</p>
+      <h3>Contact</h3>
+      <p>Tel: (03)1234-5678</p>
+      <p>Fax: (03)2234-5678</p>
     </div>
     <div class="col-md-6">
       <h2>Map</h2>
